%%{init: {'theme':'base','themeVariables':{'fontFamily':'Arial','primaryColor':'#F7F3F2','primaryTextColor':'#171717','primaryBorderColor':'#B4232F','lineColor':'#5B6068','secondaryColor':'#F3F4F6','tertiaryColor':'#FFFFFF','clusterBkg':'#FFFFFF','clusterBorder':'#D1D5DB','actorBkg':'#FFFFFF','actorBorder':'#B4232F','actorTextColor':'#171717','signalColor':'#404040','signalTextColor':'#171717','noteBkgColor':'#FFF7ED','noteBorderColor':'#C2410C','noteTextColor':'#171717'}}}%%
classDiagram
    class Organization {+UUID id;+string slug;+string plan}
    class DataSource {+UUID id;+string type;+json connection_config;+string status}
    class MonitoredTable {+UUID id;+string schema_name;+string table_name;+float sensitivity;+json check_config}
    class TableProfile {+UUID id;+bigint row_count;+float freshness_seconds;+json column_metrics;+json provenance}
    class CheckResult {+UUID id;+string check_type;+string status;+float deviation_score}
    class Incident {+UUID id;+string severity;+string status;+json fired_checks;+json llm_narration}
    class AlertConfig {+UUID id;+string channel;+json config;+bool is_active}
    Organization "1" *-- "0..*" DataSource
    DataSource "1" *-- "0..*" MonitoredTable
    MonitoredTable "1" *-- "0..*" TableProfile
    TableProfile "1" *-- "0..*" CheckResult
    MonitoredTable "1" *-- "0..*" Incident
    MonitoredTable "1" o-- "0..*" AlertConfig
